--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <style>
        /* Add some styles for the button when active */
        .btn.active {
-            border: 1px solid red;   
+            border: 1px solid #0E7A81;   
         }
         .btn {
             margin: 5px;
